<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    tools:context=".Fragments.TubFragments.ControlsFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/round_rect">

        <ImageView
            android:id="@+id/imgEngine"
            android:layout_width="0dp"
            android:layout_height="135dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_rect_btn"
            android:contentDescription="@string/ENGINE"
            android:paddingBottom="30dp"
            app:layout_constraintBottom_toTopOf="@+id/imgColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:srcCompat="@drawable/motor" />

        <ImageView
            android:id="@+id/imgColor"
            android:layout_width="0dp"
            android:layout_height="135dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_rect_btn"
            android:contentDescription="@string/CROMOTHERAPY"
            android:paddingBottom="35dp"
            app:layout_constraintBottom_toTopOf="@+id/imgTemperature"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgEngine"
            app:srcCompat="@drawable/color" />

        <ImageView
            android:id="@+id/imgTemperature"
            android:layout_width="0dp"
            android:layout_height="135dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_rect_btn"
            android:contentDescription="@string/TEMPERTURE"
            android:paddingBottom="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgColor"
            app:srcCompat="@drawable/temp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="casual"
            android:text="@string/SELECT_TO_CONTROL"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/imgEngine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ENGINE_POWER"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imgEngine"
            app:layout_constraintEnd_toEndOf="@+id/imgEngine"
            app:layout_constraintStart_toStartOf="@+id/imgEngine"
            app:layout_constraintTop_toTopOf="@+id/imgEngine"
            app:layout_constraintVertical_bias="0.85" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:text="@string/CROMOTHERAPY"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imgColor"
            app:layout_constraintEnd_toEndOf="@+id/imgColor"
            app:layout_constraintStart_toStartOf="@+id/imgColor"
            app:layout_constraintTop_toTopOf="@+id/imgColor"
            app:layout_constraintVertical_bias="0.85" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:text="@string/TEMPERTURE"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imgTemperature"
            app:layout_constraintEnd_toEndOf="@+id/imgTemperature"
            app:layout_constraintStart_toStartOf="@+id/imgTemperature"
            app:layout_constraintTop_toTopOf="@+id/imgTemperature"
            app:layout_constraintVertical_bias="0.85" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>